RESOLVED FIXED164649
[CSS Parser] Fix time unit parsing
https://bugs.webkit.org/show_bug.cgi?id=164649
Summary [CSS Parser] Fix time unit parsing
Dave Hyatt
Reported 2016-11-11 13:54:37 PST
[CSS Parser] Fix time unit parsing
Attachments
Patch (1.54 KB, patch)
2016-11-11 13:55 PST, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2016-11-11 13:55:47 PST
Dave Hyatt
Comment 2 2016-11-11 13:58:58 PST
Fixed in r208608.
Note You need to log in before you can comment on or make changes to this bug.