[CSS Parser] Fix time unit parsing https://bugs.webkit.org/show_bug.cgi?id=164649

Reviewed by Dean Jackson.

Make sure that a unitless value gets changed to milliseconds properly.

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeTime):



Canonical link: https://commits.webkit.org/182331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208608 268f45cc-cd09-0410-ab3c-d52691b4dbfc